--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="Default">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content="">
+    <meta name="description" content="Vous avez besoin d'un web designer à Lyon ou ses alentours? N'hésiter pas et contactez la chouette agence, la meilleure entreprise de web design de la région Lyonnaise !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>page2</title>
+    <title>Contact - La chouette agence</title>
 
     
 <!-- Analytics -->
