remise en état pour screen rapport 2

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="">
-    <meta name="description" content=""<!--"Vous avez besoin d'un web designer à Lyon ou ses alentours? N'hésiter pas et contactez la chouette agence, la meilleure entreprise de web design de la région Lyonnaise !"-->>
+    <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -18,7 +18,7 @@
 	<script src="./js/blocs.min.js"></script>
 	<script src="./js/jqBootstrapValidation.js"></script>
 	<script src="./js/formHandler.js"></script>
-    <title>.<!--Contact - La chouette agence--></title>
+    <title>page2</title>
 
     
 <!-- Analytics -->
