--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
-    <meta name="description" content="">
+    <meta name="description" content="La chouette agence est une entreprise de web desing basée à lyon. Nos web designers sont prêts à vous rendre attractifs et visibles, de la refonte d'un site web pour un journal local à la conception d'un site pour une agence de mariage, en passant par la créaction 
+										d'un site web pour photographes ou encore la création d'un site internet pour voyageurs.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
     
@@ -19,7 +20,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-    <title>.</title>
+	<title>La chouette agence, entreprise de web desing à Lyon</title>
 
     
 <!-- Analytics -->
