--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="Default">
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="seo, google, site web, site internet, agence design paris, agence design, agence design,agence design,agence design,agence design,agence design,agence design,agence design,agence design">
+    <meta name="keywords" content="webdesign, entreprise webdesign, entreprise webdesign lyon">
     <meta name="description" content="La chouette agence est une entreprise de web desing basée à lyon. Nos web designers sont prêts à vous rendre attractifs et visibles, de la refonte d'un site web pour un journal local à la conception d'un site pour une agence de mariage, en passant par la créaction 
 										d'un site web pour photographes ou encore la création d'un site internet pour voyageurs.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
@@ -37,10 +37,8 @@
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
-			<div class="navbar-header">
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>
-				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+			<div class="navbar-header">			
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png" alt="paris web design logo agence web meilleure agence" height="40" /></a>				
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -245,11 +243,11 @@
 							<a class="social" href="index.html"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
 					</div>
-					<div class="keywords" style="color:#F3976C;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
+					
 				</div>
 				<div class="row">
 					<div class="col-sm-4">
-						Partenaires
+						<h2>Partenaires</h2>
 							<ul>
 								<li><a href="voiture.com">voiture.com</a></li>
 								<li><a href="pizza.com">pizza.com</a></li>
@@ -258,7 +256,7 @@
 							</ul>		
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 1
+						<h2>Annuaires liste 1</h2>
 						<ul>
 							<li><a href="annuaireagence.com">annuaireagence.com</a></li>
 							<li><a href="annuaireseo.com">annuaireseo.com</a></li>
@@ -272,7 +270,7 @@
 						</ul>
 					</div>
 					<div class="col-sm-4">
-						Annuaires liste 2
+						<h2>Annuaires liste 2</h2>
 						<ul>
 							<li><a href="betterseo.com">betterseo.com</a></li>
 							<li><a href="ameliorerseo.com">ameliorerseo.com</a></li>
