--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ﻿<!doctype html>
-<html lang="Default">
+<html lang="fr-fr">
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="webdesign, entreprise webdesign, entreprise webdesign lyon">
