--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 	<script src="./js/jquery-2.1.0.js" async></script>
 	<script src="./js/bootstrap.js" async></script>
 	<script src="./js/blocs.js" async></script>
+	<script src="./js/jquery.touchSwipe.js" async></script>
+	<script src="./js/gmaps.js" async></script>
 
 	<title>La chouette agence, entreprise de web desing à Lyon</title>
 
