--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.png" class="center-block logo-width image-resize-mode" alt="Logo de la chouette agence" />
+				<img src="img/logo.png" class="center-block logo-width image-resize-mode" alt="Logo de la chouette agence" id="logo"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
