--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/1.jpg" alt="Photo de livres ouverts les uns dans les autres" class="img-responsive portfolio-thumb" /></a>
+				<a href="#" data-lightbox="img/livres-ouverts.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres-ouverts.jpg" alt="Photo de livres ouverts les uns dans les autres" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
 				</h3>
@@ -163,7 +163,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/2.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une femme regardant dans l'objectif d'un appareil photo" /></a>
+				<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une femme regardant dans l'objectif d'un appareil photo" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
 				</h3>
@@ -174,7 +174,7 @@
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/3.bmp" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/3.jpeg" class="img-responsive portfolio-thumb" alt="Différents objets du domaine de la photographie"/></a>
+				<a href="#" data-lightbox="img/materiel-de-photographie.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/materiel-de-photographie.jpeg" class="img-responsive portfolio-thumb" alt="Différents objets du domaine de la photographie"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
 				</h3>
@@ -183,7 +183,7 @@
 				</p>
 			</div>
 			<div class="col-sm-6">
-				<a href="#" data-lightbox="img/4.bmp" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/4.jpeg" class="img-responsive portfolio-thumb" alt="Photos de mains écrivant sur le clavier d'un ordinateur portable" /></a>
+				<a href="#" data-lightbox="img/bureau-et-ordinateur.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/bureau-et-ordinateur.jpeg" class="img-responsive portfolio-thumb" alt="Photos de mains écrivant sur le clavier d'un ordinateur portable" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
 				</h3>
