--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <div class="page-container">
     
 <!-- bloc-0 -->
-<div class="bloc bgc-white l-bloc " id="bloc-0">
+<header class="bloc bgc-white l-bloc " id="bloc-0">
 	<div class="container bloc-sm">
 
 		<nav class="navbar row">
@@ -54,14 +54,14 @@
 			</div>
 		</nav>
 	</div>
-</div>
+</header>
 <!-- bloc-0 END -->
 
 <!-- bloc-1-presentation -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bg-t-edge bloc-bg-texture texture-paper b-parallax" id="bloc-1-hero">
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
-			<div class="col-sm-12">
+			<article class="col-sm-12">
 				<img src="img/logo.png" class="center-block logo-width image-resize-mode" alt="Logo de la chouette agence" id="logo"/>
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
@@ -69,22 +69,22 @@
 				<div class="text-center">
 					<a href="contact.html" class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" id="cta-hero">Contact</a>
 				</div>
-			</div>
+			</article>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-1-presentation END -->
 
 <!-- bloc-2-services -->
-<div class="bloc bgc-white l-bloc" id="bloc-2-services">
+<section class="bloc bgc-white l-bloc" id="bloc-2-services">
 	<div class="container bloc-md">
-		<div class="row">
+		<article class="row">
 			<div class="col-sm-12 text-center">
 				<h2>La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</h2>
 			</div>
-		</div>
-		<div class="row voffset-lg med-width-whitespace">
-			<div class="col-sm-4">
+		</article>
+		<article class="row voffset-lg med-width-whitespace">
+			<article class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-browser sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -94,8 +94,8 @@
 				<p class="text-center ">
 					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</article>
+			<article class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-presentation sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -105,8 +105,8 @@
 				<p class="text-center ">
 					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
 				</p>
-			</div>
-			<div class="col-sm-4">
+			</article>
+			<article class="col-sm-4">
 				<div class="text-center">
 					<span class="et-icon-edit sm-shadow icon-dark-slate-blue icons icon-lg"></span>
 				</div>
@@ -116,21 +116,21 @@
 				<p class="text-center ">
 					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
-			</div>
-		</div>
-		<div class="row voffset-lg voffset">
+			</article>
+		</article>
+		<article class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
 				<q>La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intégrer à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon</q>
 			</div>
-		</div>
+		</article>
 	</div>
-</div>
+</section>
 <!-- bloc-2-services END -->
 
 <!-- bloc-3-what-i-do -->
-<div class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
+<section class="bloc tc-white bgc-atomic-tangerine bg-presentation d-bloc bloc-bg-texture texture-paper b-parallax" id="bloc-3-what-i-do">
 	<div class="container bloc-lg">
-		<div class="row tight-width-whitespace black-background">
+		<article class="row tight-width-whitespace black-background">
 			<div class="col-sm-12">
 				<h2 class="mg-md text-center tc-white">
 					Nous souhaitons aider les entreprises de la région Lyonnaise à se développer et à connaître le succès. Nous travaillons pour aider les entreprises locales à attirer de nouveaux clients .<br>
@@ -139,13 +139,13 @@
 					Nous aimons collaborer avec des entrepreneurs créatifs et des entreprises locale, qu’elles aient besoin de créer un site de A à Z ou de donner un coup de jeune à leur site. Que vous ayez besoin d’une identité visuelle complète ou d’une refonte de votre site, n’hésitez pas à nous contacter. Nous travaillerons ensemble pour créer des sites beau et bien structurés, qui seront facilement trouvable sur les moteurs de recherche. <br><br><a class="ltc-white bold-link" href="contact.html">Contactez notre équipe</a><br>
 				</p>
 			</div>
-		</div>
+		</article>
 	</div>
-</div>
+</section>
 <!-- bloc-3-what-i-do END -->
 
 <!-- bloc-4-portfolio -->
-<div class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
+<section class="bloc bgc-white bg-lines-h2-bg bg-repeat l-bloc" id="bloc-4-portfolio">
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -153,7 +153,7 @@
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/livres-ouverts.jpg" data-gallery-id="gallery-1" data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img src="img/livres-ouverts.jpg" alt="Photo de livres ouverts les uns dans les autres" class="img-responsive portfolio-thumb" /></a>
 				<h3 class="mg-md text-center">
 					Refonte d'un site web pour un journal local
@@ -161,8 +161,8 @@
 				<p class="text-center">
 					Nous avons créé une nouvelle identité visuelle pour un journal lyonnais.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</article>
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/photographe.jpg" data-gallery-id="gallery-1" data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img src="img/photographe.jpg" class="img-responsive portfolio-thumb" alt="Photo d'une femme regardant dans l'objectif d'un appareil photo" /></a>
 				<h3 class="mg-md text-center">
 					Création d'un site web pour photographes
@@ -170,10 +170,10 @@
 				<p class="text-center">
 					Nous avons conçu la plateforme idéale pour laisser place aux clichés des photographes.
 				</p>
-			</div>
+			</article>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
-			<div class="col-sm-6">
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/materiel-de-photographie.jpeg" data-gallery-id="gallery-1" data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img src="img/materiel-de-photographie.jpeg" class="img-responsive portfolio-thumb" alt="Différents objets du domaine de la photographie"/></a>
 				<h3 class="mg-md text-center">
 					Création d'un site internet pour un voyageur
@@ -181,8 +181,8 @@
 				<p class="text-center">
 					Nous avons élaboré un site internet et des illustrations pour sublimer les vidéos et les articles de ce voyageur.
 				</p>
-			</div>
-			<div class="col-sm-6">
+			</article>
+			<article class="col-sm-6">
 				<a href="#" data-lightbox="img/bureau-et-ordinateur.jpeg" data-gallery-id="gallery-1" data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img src="img/bureau-et-ordinateur.jpeg" class="img-responsive portfolio-thumb" alt="Photos de mains écrivant sur le clavier d'un ordinateur portable" /></a>
 				<h3 class="mg-md text-center">
 					Conception d'un site pour une agence de mariage
@@ -190,59 +190,59 @@
 				<p class="text-center">
 					Nous avons travaillé avec cette agence pour créer un site internet permettant la présentation détaillée de leurs prestations.
 				</p>
-			</div>
+			</article>
 		</div>
 	</div>
-</div>
+</section>
 <!-- bloc-4-portfolio END -->
 
 <!-- bloc-5-cta -->
-<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
+<section class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 	<div class="container bloc-lg">
-		<div class="row">
+		<article class="row">
 			<h2 class="mg-md text-center tc-white">
 				Prêt pour redonner vie à votre projet ?<br>Contactez notre équipe !
 			</h2>
 			<div class="col-sm-12 text-center">
 				<a href="contact.html" class="btn btn-atomic-tangerine btn-clean btn-rd btn-lg cta-hero">Contact</a>
 			</div>
-		</div>
+		</article>
 	</div>
-</div>
+</section>
 <!-- bloc-5-cta END -->
 
 <!-- Footer - bloc-8 -->
-<div class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
+<footer class="bloc bgc-atomic-tangerine d-bloc" id="bloc-8">
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
 					La chouette agence - Agence web basée à Lyon.<br>
 				</p>
-				<div class="row row-no-gutters social">
-					<div class="col-sm-3">
+				<section class="row row-no-gutters social">
+					<article class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html" aria-label="Twitter"><span class="fa fa-twitter icon-md"></span></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</article>
+					<article class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html" aria-label="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</article>
+					<article class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html" aria-label="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 						</div>
-					</div>
-					<div class="col-sm-3">
+					</article>
+					<article class="col-sm-3">
 						<div class="text-center">
 							<a class="social" href="index.html" aria-label="Instagram"><span class="fa fa-instagram icon-md"></span></a>
 						</div>
-					</div>
+					</article>
 					
-				</div>
-				<div class="row text-center">
+				</section>
+				<section class="row text-center">
 					<div class="col-sm-12" id="partenaires">
 						<h2>Partenaires</h2>
 							<ul>
@@ -252,11 +252,11 @@
 								<li><a href="immobilierseo.com">immobilierseo</a></li>
 							</ul>		
 					</div>					
-				</div>
+				</section>
 			</div>
 		</div>
 	</div>
-</div>
+</footer>
 <!-- Footer - bloc-8 END -->
 
 </div>
